<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">酒店自助入住终端</string>
    <string name="sans_serif" translatable="false">sans-serif</string>

    <!-- 图片描述 -->
    <!-- 基础界面 -->
    <string name="ib_back">后退按钮</string>

    <!-- 主界面 -->
    <string name="ib_member_checkin">会员入住</string>
    <string name="ib_guest_checkin">散客入住</string>
    <string name="ib_extension">续住</string>
    <string name="ib_checkout">退房</string>
    <string name="ib_about">关于</string>
    <string name="iv_notice">公告图案</string>

    <!-- 声纹验证界面 -->
    <string name="iv_pwd1">声纹密码第1位</string>
    <string name="iv_pwd2">声纹密码第2位</string>
    <string name="iv_pwd3">声纹密码第3位</string>
    <string name="iv_pwd4">声纹密码第4位</string>
    <string name="iv_pwd5">声纹密码第5位</string>
    <string name="iv_pwd6">声纹密码第6位</string>
    <string name="iv_pwd7">声纹密码第7位</string>
    <string name="iv_pwd8">声纹密码第8位</string>

    <!-- 选房间界面 -->
    <string name="iv_room">房间条目</string>
    <string name="iv_room_normal">可选</string>
    <string name="iv_room_selected">已选</string>
    <string name="iv_room_sold">已售</string>

    <!-- 支付界面 -->
    <string name="iv_qrcode">支付二维码</string>

    <!-- 结果界面 -->
    <string name="iv_smile">笑脸</string>

    <!-- 关于界面 -->
    <string name="iv_us">关于我们</string>

    <!-- 对话框 -->
    <string name="iv_type">对话框类型</string>

    <!-- 界面文本 -->
    <!-- 初始化界面 -->
    <string name="tv_init">系统初始化中，请稍后……</string>

    <!-- 散客登记界面 -->
    <string name="btn_num_0">0</string>
    <string name="btn_num_1">1</string>
    <string name="btn_num_2">2</string>
    <string name="btn_num_3">3</string>
    <string name="btn_num_4">4</string>
    <string name="btn_num_5">5</string>
    <string name="btn_num_6">6</string>
    <string name="btn_num_7">7</string>
    <string name="btn_num_8">8</string>
    <string name="btn_num_9">9</string>
    <string name="btn_reset">清空</string>
    <string name="btn_delete">删除</string>
    <string name="btn_captcha">获取验证码</string>
    <string name="btn_submit">提交验证</string>
    <string name="et_mobile">手机号</string>
    <string name="et_captcha">验证码</string>

    <!-- 选房间界面 -->
    <string name="tv_room_normal">可选</string>
    <string name="tv_room_selected">已选</string>
    <string name="tv_room_sold">已售</string>

    <!-- 房间信息界面 -->
    <string name="tv_room">房号：</string>
    <string name="tv_type">房型：</string>
    <string name="tv_price">房价：</string>
    <string name="tv_mobile">手机：</string>
    <string name="tv_checkin">入住：</string>
    <string name="tv_checkout">预离：</string>
    <string name="btn_checkin">入住</string>
    <string name="btn_extension">续住</string>
    <string name="btn_checkout">退房</string>

    <!-- 支付界面 -->
    <string name="tv_days1">总计入住</string>
    <string name="tv_days2">天</string>
    <string name="tv_total1">，共需支付</string>
    <string name="tv_total2">元</string>
    <string name="btn_pay">我已支付</string>

    <!-- 结果界面 -->
    <string name="btn_close">关闭</string>

    <!-- 关于界面 -->
    <string name="tv_us">此《酒店自助入住终端》是厦门大学信息科学与技术学院“美团点评杯”软件开发大赛的参赛作品。\n\n参赛选手：\n骆欣\t\t计算机科学系\n谢波\t\t计算机科学系\n刘凯\t\t智能科学与技术系\n</string>
    <string name="btn_exit">退出</string>

    <!-- 进度对话框 -->
    <string name="tv_waiting">请稍候……</string>

    <!-- Activity标题 -->
    <string name="title_activity_swipe_card">请刷卡</string>
    <string name="title_activity_voiceprint">请验证声纹</string>
    <string name="title_activity_select_time">请选择预离时间</string>
    <string name="title_activity_select_room">请选择意向房间</string>
    <string name="title_activity_pay">请确认支付信息</string>
    <string name="title_activity_about">关于我们</string>
    <string name="title_activity_capture_id_card">请拍摄身份证</string>
    <string name="title_activity_guest">请验证手机</string>
    <string name="title_activity_room_info">请确认房间信息</string>
    <string name="title_activity_result">操作成功</string>

    <!-- 测试 -->
    <string name="title_activity_test_voice_service">TestVoiceServiceActivity</string>
    <string name="title_activity_test_core_service">TestCoreServiceActivity</string>
    <string name="title_activity_test_misc_service">TestMiscServiceActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_test_calendar_listview">TestCalendarListviewActivity</string>

</resources>