<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="32dp"
    android:layout_marginStart="32dp"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:id="@+id/ll_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >

        <ImageView
            android:id="@+id/iv_pwd1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/iv_pwd1"
            android:scaleType="fitCenter" />

        <ImageView
            android:id="@+id/iv_pwd2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:contentDescription="@string/iv_pwd2"
            android:scaleType="fitCenter" />

        <ImageView
            android:id="@+id/iv_pwd3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:contentDescription="@string/iv_pwd3"
            android:scaleType="fitCenter" />

        <ImageView
            android:id="@+id/iv_pwd4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:contentDescription="@string/iv_pwd4"
            android:scaleType="fitCenter" />

        <ImageView
            android:id="@+id/iv_pwd5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:contentDescription="@string/iv_pwd5"
            android:scaleType="fitCenter" />

        <ImageView
            android:id="@+id/iv_pwd6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:contentDescription="@string/iv_pwd6"
            android:scaleType="fitCenter" />

        <ImageView
            android:id="@+id/iv_pwd7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:contentDescription="@string/iv_pwd7"
            android:scaleType="fitCenter" />

        <ImageView
            android:id="@+id/iv_pwd8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:contentDescription="@string/iv_pwd8"
            android:scaleType="fitCenter" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_volume"
        style="@android:style/Widget.SeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_pwd"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:focusable="false"
        android:max="30"
        android:visibility="invisible" />

</RelativeLayout>