<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    tools:context="${relativePackage}.${activityClass}" >

    <!-- 左半边 -->

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/et_mobile"
            android:text="@string/et_mobile" />

        <EditText
            android:id="@id/et_mobile"
            style="?android:attr/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext"
            android:gravity="center"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textSize="28sp" />

        <TextView
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@+id/et_captcha"
            android:text="@string/et_captcha" />

        <EditText
            android:id="@id/et_captcha"
            style="?android:attr/textViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext"
            android:gravity="center"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textSize="28sp" />

        <Button
            android:id="@+id/btn_captcha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn"
            android:text="@string/btn_captcha" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn"
            android:text="@string/btn_submit"
            android:visibility="gone" />
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray" >
    </View>

    <!-- 右半边 -->

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_num_1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn"
                android:onClick="onNumPadClick"
                android:text="@string/btn_num_1" />

            <Button
                android:id="@+id/btn_num_2"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn"
                android:onClick="onNumPadClick"
                android:text="@string/btn_num_2" />

            <Button
                android:id="@+id/btn_num_3"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn"
                android:onClick="onNumPadClick"
                android:text="@string/btn_num_3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_num_4"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn"
                android:onClick="onNumPadClick"
                android:text="@string/btn_num_4" />

            <Button
                android:id="@+id/btn_num_5"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn"
                android:onClick="onNumPadClick"
                android:text="@string/btn_num_5" />

            <Button
                android:id="@+id/btn_num_6"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn"
                android:onClick="onNumPadClick"
                android:text="@string/btn_num_6" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_num_7"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn"
                android:onClick="onNumPadClick"
                android:text="@string/btn_num_7" />

            <Button
                android:id="@+id/btn_num_8"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn"
                android:onClick="onNumPadClick"
                android:text="@string/btn_num_8" />

            <Button
                android:id="@+id/btn_num_9"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn"
                android:onClick="onNumPadClick"
                android:text="@string/btn_num_9" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/btn_reset"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn"
                android:onClick="onNumPadClick"
                android:text="@string/btn_reset" />

            <Button
                android:id="@+id/btn_num_0"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn"
                android:onClick="onNumPadClick"
                android:text="@string/btn_num_0" />

            <Button
                android:id="@+id/btn_delete"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn"
                android:onClick="onNumPadClick"
                android:text="@string/btn_delete" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>