<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="2dp"
        android:layout_weight="1" >

        <ImageButton
            android:id="@+id/ib_member_checkin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/member_checkin"
            android:contentDescription="@string/ib_member_checkin"
            android:onClick="toSubfunction" />

        <ImageButton
            android:id="@+id/ib_guest_checkin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@drawable/guest_checkin"
            android:contentDescription="@string/ib_guest_checkin"
            android:onClick="toSubfunction" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp"
        android:layout_weight="1" >

        <ImageButton
            android:id="@+id/ib_extension"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/extension"
            android:contentDescription="@string/ib_extension"
            android:onClick="toSubfunction" />

        <ImageButton
            android:id="@+id/ib_checkout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@drawable/checkout"
            android:contentDescription="@string/ib_checkout"
            android:onClick="toSubfunction" />

        <ImageButton
            android:id="@+id/ib_about"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="@drawable/about"
            android:contentDescription="@string/ib_about"
            android:onClick="toSubfunction" />
    </LinearLayout>

</LinearLayout>